--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -7,8 +7,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="H, 1.13:1"
         android:layout_marginTop="80dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -28,6 +29,7 @@
         android:text="Пожалуй, лучший фитнес трекер в ДВФУ"
         android:textAlignment="center"
         android:textSize="25dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -42,38 +44,40 @@
         android:layout_marginTop="16dp"
         android:text="Созданный студентами 2-го курса"
         android:textAlignment="center"
+        android:textColor="#808080"
         android:textSize="17dp"
         android:layout_marginStart="39dp"
         android:layout_marginEnd="38dp"
-        app:layout_constraintBottom_toTopOf="@+id/materialButton3"
+        app:layout_constraintBottom_toTopOf="@+id/btnRegistration"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:layout_editor_absoluteX="39dp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/materialButton3"
+        android:id="@+id/btnRegistration"
+        style="@style/BaseButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Зарегистрироваться"
         android:layout_marginStart="97dp"
         android:layout_marginEnd="96dp"
-        app:layout_constraintBottom_toTopOf="@+id/TextViewHaveAccount"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="96dp" />
+        app:layout_constraintBottom_toTopOf="@+id/tvLogin"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
 
     <TextView
-        android:id="@+id/TextViewHaveAccount"
+        android:id="@+id/tvLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="28dp"
         android:layout_marginBottom="60dp"
         android:layout_marginStart="130dp"
+        android:textStyle="bold"
+        android:textColor="@color/color_blue"
         android:layout_marginEnd="129dp"
         android:text="Уже есть аккаунт?"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialButton3"
-        tools:layout_editor_absoluteX="130dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnRegistration"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
