--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -109,7 +109,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
-                android:id="@+id/TextViewSex"
+                android:id="@+id/tvSex"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -124,39 +124,40 @@
 
             </TextView>
 
-            <CheckBox
-                android:id="@+id/checkBoxMale"
+            <RadioGroup
+                android:id="@+id/rgSex"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Мужской"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/TextViewSex">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="@+id/tvSex"
+                app:layout_constraintStart_toEndOf="@+id/tvSex"
+                app:layout_constraintTop_toBottomOf="@+id/tvSex">
 
-            </CheckBox>
+                <RadioButton
+                    android:id="@+id/rbMale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:text="Мужской" />
 
-            <CheckBox
-                android:id="@+id/checkboxFemale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Женский"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/checkBoxMale">
-            </CheckBox>
+                <RadioButton
+                    android:id="@+id/rbFemale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:text="Женский" />
 
-            <CheckBox
-                android:id="@+id/checkboxEnother"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Другое"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/checkboxFemale">
-            </CheckBox>
+                <RadioButton
+                    android:id="@+id/rbEnother"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:text="Другое" />
+
+            </RadioGroup>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/materialButton"
@@ -168,7 +169,8 @@
                 android:text="Зарегестрироваться"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/checkboxEnother">
+                app:layout_constraintTop_toBottomOf="@+id/rgSex">
+
             </com.google.android.material.button.MaterialButton>
 
             <TextView
@@ -185,7 +187,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialButton"></TextView>
+                app:layout_constraintTop_toBottomOf="@+id/materialButton" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
