--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,10 +6,29 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="Headline5">
+        <item name="fontFamily">sans-serif</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="Body1">
+        <item name="fontFamily">sans-serif</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Headline5.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="ButtonTextStyle">
         <item name="fontFamily">sans-serif</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Inter_16">
+        <item name="fontFamily">sans-serif</item>
         <item name="android:textSize">16sp</item>
     </style>
 
